fix: use flex wrap to wrap overflowing deploment tiles (#16871)

--- a/src/modules/75-cd/components/PipelineStudio/DeployStageSetupShell/DeployStage.module.scss
+++ b/src/modules/75-cd/components/PipelineStudio/DeployStageSetupShell/DeployStage.module.scss
@@ -74,7 +74,12 @@
     }
   }
   .cardListContainer {
-    margin-top: 0 !important;
+    display: flex;
+    gap: var(--spacing-small);
+    flex-wrap: wrap;
+    label {
+      margin-left: 0px !important;
+    }
   }
 }
 
